force-app/main/default/objects/Maintenance__c/Maintenance__c.object-meta.xml
<CustomObject>
    <label>保守</label>
    <nameField>
        <displayFormat>MT-{0000000}</displayFormat>
        <label>保守番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>