force-app/main/default/objects/Maintenance__c/fields/ConservationMeasures__c.field-meta.xml
<CustomField>
    <fullName>ConservationMeasures__c</fullName>
    <label>保全対策</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>主要機器の更新済</fullName>
            </value>
            <value>
                <fullName>部品ﾚﾍﾞﾙ更新済(ヒューズ・リレー類)</fullName>
            </value>
            <value>
                <fullName>ほとんど未実施</fullName>
            </value>
            <value>
                <fullName>納入後未実施</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>