force-app/main/default/objects/Maintenance__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>保守終了日</label>
    <type>Date</type>
</CustomField>