force-app/main/default/objects/Maintenance__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <label>点検内容</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>