force-app/main/default/objects/Maintenance__c/fields/MaintainanceCost__c.field-meta.xml
<CustomField>
    <fullName>MaintainanceCost__c</fullName>
    <label>保守金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>