force-app/main/default/objects/Maintenance__c/fields/MaintenanceCompany01__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceCompany01__c</fullName>
    <label>自社・他社</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPEC契約</fullName>
            </value>
            <value>
                <fullName>他社契約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>