force-app/main/default/objects/Maintenance__c/fields/MaintenanceContractContent__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceContractContent__c</fullName>
    <label>保守契約内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>年間保守契約</fullName>
            </value>
            <value>
                <fullName>定期契約</fullName>
            </value>
            <value>
                <fullName>スポット契約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>