force-app/main/default/objects/Maintenance__c/fields/MaintenanceOwnersDivision__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceOwnersDivision__c</fullName>
    <formula>TEXT(Owner:User.DepartmentAndDivision__c )</formula>
    <label>所有者の本支社</label>
    <type>Text</type>
</CustomField>