force-app/main/default/objects/Maintenance__c/fields/Opp1__c.field-meta.xml
<CustomField>
    <fullName>Opp1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>保守</relationshipLabel>
    <relationshipName>Opps5</relationshipName>
    <type>Lookup</type>
</CustomField>