force-app/main/default/objects/Maintenance__c/fields/PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>PersonInCharge__c</fullName>
    <label>担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>