force-app/main/default/objects/Maintenance__c/fields/Prodt__c.field-meta.xml
<CustomField>
    <fullName>Prodt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>SBU名で検索頂くと、SBU毎の全ての製品結果を表示できます</inlineHelpText>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>保守</relationshipLabel>
    <relationshipName>Prodts</relationshipName>
    <type>Lookup</type>
</CustomField>