force-app/main/default/objects/Maintenance__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>保守</relationshipLabel>
    <relationshipName>Prop1</relationshipName>
    <type>Lookup</type>
</CustomField>