force-app/main/default/objects/Maintenance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF (  AND(StartDate__c  &lt;=  TODAY() ,  EndDate__c  &gt;= TODAY() )  , &quot;契約期間内&quot;, &quot;契約期間外&quot;)</formula>
    <label>ステータス</label>
    <type>Text</type>
</CustomField>